force-app/main/default/objects/CP_Lead__c/CP_Lead__c.object-meta.xml
<CustomObject>
    <label>CP Lead</label>
    <nameField>
        <displayFormat>CPL-{00000}</displayFormat>
        <label>CP Lead No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CP Leads</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>