force-app/main/default/objects/CP_Lead__c/fields/Channel_Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Partner Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CP Leads</relationshipLabel>
    <relationshipName>CP_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>