force-app/main/default/objects/CP_Lead__c/fields/Configuration_Required__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Required__c</fullName>
    <label>Configuration Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Configuration_Required</valueSetName>
    </valueSet>
</CustomField>