force-app/main/default/objects/CP_Lead__c/fields/CP_Lead_Call_Comment_History__c.field-meta.xml
<CustomField>
    <fullName>CP_Lead_Call_Comment_History__c</fullName>
    <label>CP Lead Call Comment History</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>