force-app/main/default/objects/CP_Lead__c/fields/CP_Lead_Call_Count__c.field-meta.xml
<CustomField>
    <fullName>CP_Lead_Call_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CP Lead Call Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>