force-app/main/default/objects/CP_Lead__c/fields/CP_Lead_Next_Follow_up_Date__c.field-meta.xml
<CustomField>
    <fullName>CP_Lead_Next_Follow_up_Date__c</fullName>
    <label>CP Lead Next Follow-up Date</label>
    <type>DateTime</type>
</CustomField>