force-app/main/default/objects/CP_Lead__c/fields/Cp_Lead_Sub_Stage__c.field-meta.xml
<CustomField>
    <fullName>Cp_Lead_Sub_Stage__c</fullName>
    <label>Cp Lead Sub Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CP_Lead_Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Not Answering</fullName>
            </value>
            <value>
                <fullName>SNP</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Visit Confirmed</fullName>
            </value>
            <value>
                <fullName>Visit Done</fullName>
            </value>
            <value>
                <fullName>Budget does not match</fullName>
            </value>
            <value>
                <fullName>Location mismatch</fullName>
            </value>
            <value>
                <fullName>Area/Configuration Mismatch</fullName>
            </value>
            <value>
                <fullName>Possession does not match</fullName>
            </value>
            <value>
                <fullName>Booked with someone else</fullName>
            </value>
            <value>
                <fullName>Not answering / responding</fullName>
            </value>
            <value>
                <fullName>General Enquiry</fullName>
            </value>
            <value>
                <fullName>Junk</fullName>
            </value>
            <value>
                <fullName>Loan Issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>