force-app/main/default/objects/CP_Lead__c/fields/Cp_Lead_Sub_Stage_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cp_Lead_Sub_Stage_Reason__c</fullName>
    <label>Cp Lead Sub Stage Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Cp_Lead_Sub_Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Looking for Smaller configuration/area</fullName>
            </value>
            <value>
                <fullName>Looking for bigger configuration/area</fullName>
            </value>
            <value>
                <fullName>Looking for RTMI</fullName>
            </value>
            <value>
                <fullName>Looking for early possession</fullName>
            </value>
            <value>
                <fullName>After Pitched</fullName>
            </value>
            <value>
                <fullName>Before Pitched</fullName>
            </value>
            <value>
                <fullName>Switched off, not reachable, not answering</fullName>
            </value>
            <value>
                <fullName>Invalid customer contact number</fullName>
            </value>
            <value>
                <fullName>Invalid Enquiry</fullName>
            </value>
            <value>
                <fullName>False Enquiry</fullName>
            </value>
            <value>
                <fullName>Not looking for the property</fullName>
            </value>
            <value>
                <fullName>Abusive Clients</fullName>
            </value>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Booked Customers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>