force-app/main/default/objects/CP_Lead__c/fields/CP_Project__c.field-meta.xml
<CustomField>
    <fullName>CP_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CP Project</label>
    <referenceTo>CP_Project__c</referenceTo>
    <relationshipLabel>CP Leads</relationshipLabel>
    <relationshipName>CP_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>