force-app/main/default/objects/CP_Lead__c/fields/Current_Resdient_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Current_Resdient_Configuration__c</fullName>
    <label>Current Resdient Configuration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Current_Residence_Configuration</valueSetName>
    </valueSet>
</CustomField>