force-app/main/default/objects/CP_Lead__c/fields/Family_Size__c.field-meta.xml
<CustomField>
    <fullName>Family_Size__c</fullName>
    <label>Family Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Family_Size</valueSetName>
    </valueSet>
</CustomField>