force-app/main/default/objects/CP_Lead__c/fields/Is_CP_Lead_Call_First_Answered__c.field-meta.xml
<CustomField>
    <fullName>Is_CP_Lead_Call_First_Answered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is CP Lead Call First Answered</label>
    <type>Checkbox</type>
</CustomField>