force-app/main/default/objects/CP_Lead__c/fields/Last_CP_Lead_Call_Comment__c.field-meta.xml
<CustomField>
    <fullName>Last_CP_Lead_Call_Comment__c</fullName>
    <label>Last CP Lead Call Comment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>