force-app/main/default/objects/CP_Lead__c/fields/Last_CP_Lead_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_CP_Lead_Call_Date__c</fullName>
    <label>Last CP Lead Call Date</label>
    <type>DateTime</type>
</CustomField>