force-app/main/default/objects/CP_Lead__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>CP Leads</relationshipLabel>
    <relationshipName>CP_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>