force-app/main/default/objects/CP_Lead__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>CP Leads</relationshipLabel>
    <relationshipName>CP_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>