force-app/main/default/objects/CP_Lead__c/fields/Proposed_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Visit_Date__c</fullName>
    <label>Proposed Visit Date</label>
    <type>DateTime</type>
</CustomField>