force-app/main/default/objects/CP_Lead__c/fields/Sourcing_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sourcing Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>CP Leads</relationshipLabel>
    <relationshipName>CP_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>