force-app/main/default/objects/CP_Lead__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>CP_Lead_Stage__c</columns>
    <columns>Channel_Partner_Name__c</columns>
    <columns>CP_Project__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>